--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,5 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID" version="3.0">
+  
+  <servlet>
+  <servlet-name>Test2</servlet-name>
+  <servlet-class>org.pgs.servelet</servlet-class>  
+  </servlet>
+  
+  <servlet-mapping>
+  <servlet-name>Test2</servlet-name>
+  <url-pattern>/servelet1</url-pattern>
+  </servlet-mapping>
+  
+  
+  
+  
+  
   <display-name>Prithvi</display-name>
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
